--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,6 @@ dist/
 *.egg
 pip-wheel-metadata/
 
-
 # Virtual envs
 VRenv/
 
@@ -19,19 +18,22 @@ VRenv/
 .pytest_cache/
 .vscode/
 
-
 # OS cruft
 .DS_Store
 
-
-# Project outputs and Data
+# ───────── Project outputs and Data ─────────
 runs/**
 results/**
-data/
-logs/
-extra/
+logs/**
+extra/**
 
-
+# Ignore data folder, but keep specific subfolders
+data/*
+!data/media/
 !data/media/**
+!data/real/
 !data/real/**
+
+# Keep image assets for documentation
+!docs/img/
 !docs/img/**
